--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
-/* Add styles here */
+body {
+    background-color: #b30000;
+    color: white;
+}
+
+img {
+    width: 300px;
+    max-width: 90%;
+    border-radius: 20px;
+    margin: 20px auto;
+    
+}
