--- a/style.css
+++ b/style.css
@@ -1,62 +1,47 @@
-* {
-    margin 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+body {
+  background-color: red;
+  color: white; 
+  text-align: center; 
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
-    display: flex;
-    background: red;
-    height: 5rem;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 3rem;
-    padding-inline-end: 4rem;
+ul, ol {
+  list-style: none;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-nav ul {
-    display: flex;
-    list-style: none;
-    gap: 3rem;
+a {
+  color: white;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-nav li:hover {
-    transform: scale(1.1);
-    transition: 400ms;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
-}
-
-main {
-    display: flex;
-    justify-content: center;
-}
-
-main div {
-    background: red;
-    display: flex;
-    align-items: center;
-    width: fit-content;
-    padding: 2rem;
-    border-radius: 1rem;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-div p {
-    width: 35rem;
-    text-align: center;
+a:hover {
+  text-decoration: underline;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
-    width: 300px;
-    max-width: 90%;
-    border-radius: 20px;
-    margin: 20px auto;
+  display: block;
+  margin: 20px auto; 
+  width: 250px;       
+  height: auto;      
+  border-radius: 10px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+header {
+  display: flex;
+  background: red;
+  height: 5rem;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3rem;
+  padding-inline-end: 4rem;
 }
